feat：完善事务并发模型

--- a/Read/ReadProject/36.NDK开发设计实践.md
+++ b/Read/ReadProject/36.NDK开发设计实践.md
@@ -21,6 +21,7 @@
     - 4.2 so库查询操作
     - 4.3 so库如何反编译
     - 4.4 so库加载流程
+    - 4.5 CMake工作流程
 - 05.实践几个案例
     - 5.1 Java静态调用C/C++
     - 5.2 C/C++调用Java
@@ -37,55 +38,58 @@
 
 
 
+
 ### 01.学习JNI开发流程
 #### 1.1 JNI开发概念
-- .SO库是什么东西
-    - NDK为了方便使用，提供了一些脚本，使得更容易的编译C/C++代码。在Android程序编译中会将C/C++ 编译成动态库 so 文件，类似java库.jar文件一样，它的生成需要使用NDK工具来打包。
-    - so是shared object的缩写，见名思义就是共享的对象，机器可以直接运行的二进制代码。实质so文件就是一堆C、C++的头文件和实现文件打包成一个库。
-- JNI是什么东西
-    - JNI的全称是Java Native Interface，即本地Java接口。因为 Java 具备跨平台的特点，所以Java 与 本地代码交互的能力非常弱。
-    - 采用JNI特性可以增强 Java 与本地代码交互的能力，使Java和其他类型的语言如C++/C能够互相调用。
+- `.SO`库是什么东西
+    - `NDK`为了方便使用，提供了一些脚本，使得更容易的编译`C/C++`代码。在Android程序编译中会将`C/C++`编译成动态库 so 文件，类似java库.jar文件一样，它的生成需要使用`NDK`工具来打包。
+    - `so`是`shared object`的缩写，见名思义就是共享的对象，机器可以直接运行的二进制代码。实质`so`文件就是一堆C、C++的头文件和实现文件打包成一个库。
+- `JNI`是什么东西
+    - `JNI`的全称是`Java Native Interface`，即本地Java接口。因为 `Java` 具备跨平台的特点，所以`Java` 与 本地代码交互的能力非常弱。
+    - 采用`JNI`特性可以增强 Java 与本地代码交互的能力，使`Java`和其他类型的语言如`C++/C`能够互相调用。
 
 
 
 
 #### 1.2 JNI和NDK的关系
-- JNI和NDK学习内容太难
-    - 其实难的不是JNI和NDK，而是C/C++语言，JNI和NDK只是个工具，很容易学习的。
-- JNI和NDK有何联系
-    - 学习JNI之前，首先得先知道JNI、NDK、Java和C/C++之间的关系。
-    - 在Android开发中，有时为了性能和安全性（反编译），需要使用C/C++语言，但是Android APP层用的是Java语言，怎么才能让这两种语言进行交流呢，因为他们的编码方式是不一样的，这是就需要JNI了。
-    - JNI可以被看作是代理模式，JNI是java接口，用于Java与C/C++之间的交互，作为两者的桥梁，也就是Java让JNI代其与C/C++沟通。
-    - NDK是Android工具开发包，帮助快速开发C/C++动态库，相当于JDK开发java程序一样，同时能帮打包生成.so库
+- `JNI`和`NDK`学习内容太难
+    - 其实难的不是`JNI`和`NDK`，而是`C/C++`语言，`JNI`和`NDK`只是个工具，很容易学习的。
+- `JNI`和`NDK`有何联系
+    - 学习`JNI`之前，首先得先知道`JNI`、`NDK`、`Java`和`C/C++`之间的关系。
+    - 在`Android`开发中，有时为了性能和安全性（反编译），需要使用`C/C++`语言，但是`Android APP`层用的是`Java`语言，怎么才能让这两种语言进行交流呢，因为他们的编码方式是不一样的，这是就需要`JNI`了。
+    - `JNI`可以被看作是代理模式，`JNI`是`java`接口，用于`Java`与`C/C++`之间的交互，作为两者的桥梁，也就是`Java`让`JNI`代其与`C/C++`沟通。
+    - `NDK`是`Android`工具开发包，帮助快速开发`C/C++`动态库，相当于`JDK`开发`java`程序一样，同时能帮打包生成`.so`库
+
 
 
 #### 1.3 JNI实践步骤
 - 操作实践步骤
-    - 第一步，编写native方法。
-    - 第二步，根据此native方法编写C文件。
-    - 第三步，使用NDK打包成.so库。
-    - 第四步，使用.so库然后调用api。
-- 如何使用NDK打包.so库
-    - 1，编写Android.mk文件，此文件用来告知NDK打包.so库的规则
-    - 2，使用ndk-build打包.so库
+    - 第一步，编写`native`方法。
+    - 第二步，根据此`native`方法编写C文件。
+    - 第三步，使用`NDK`打包成`.so`库。
+    - 第四步，使用`.so`库然后调用`api`。
+- 如何使用`NDK`打包`.so`库
+    - 1，编写`Android.mk`文件，此文件用来告知`NDK`打包.so库的规则
+    - 2，使用`ndk-build`打包`.so`库。推荐使用这种
 - 相关学习文档
     - NDK学习：https://developer.android.google.cn/ndk/guides?hl=zh-cn
 
 
+
 #### 1.4 NDK使用场景
-- NDK的使用场景一般在：
+- `NDK`的使用场景一般在：
     - 1.为了提升这些模块的性能，对图形，视频，音频等计算密集型应用，将复杂模块计算封装在.so或者.a文件中处理。
-    - 2.使用的是C/C++进行编写的第三方库移植。如ffmppeg，OpenGl等。
-    - 3.某些情况下为了提高数据安全性，也会封装so来实现。毕竟使用纯Java开发的app是有很多逆向工具可以破解的。
+    - 2.使用的是`C/C++`进行编写的第三方库移植。如`ffmppeg`，`OpenGl`等。
+    - 3.某些情况下为了提高数据安全性，也会封装so来实现。毕竟使用纯`Java`开发的app是有很多逆向工具可以破解的。
 
 
 
 #### 1.5 学习路线说明
 - JNI学习路线介绍
     - 1.首先要有点C/C++的基础，这个我是在 [菜鸟教程](https://www.runoob.com/cplusplus/cpp-tutorial.html) 上学习的
-    - 2.理解NDK和JNI的一些概念，以及NDK的一个大概的架构分层，JNI的开发步骤是怎样的
-    - 3.掌握案例练习，前期先写案例，比如java调用c/c++，或者c/c++调用java。把这个案例写熟，跑通即可
-    - 4.案例练习之后，然后在思考NDK是怎么编译的，如何打包so文件，loadLibrary的流程，CMake工作流程等一些基础的原理
+    - 2.理解`NDK`和`JNI`的一些概念，以及`NDK`的一个大概的架构分层，`JNI`的开发步骤是怎样的
+    - 3.掌握案例练习，前期先写案例，比如`java`调用`c/c++`，或者`c/c++`调用`java`。把这个案例写熟，跑通即可
+    - 4.案例练习之后，然后在思考`NDK`是怎么编译的，如何打包`so`文件，`loadLibrary`的流程，`CMake`工作流程等一些基础的原理
     - 5.在实践过程中，先记录遇到的问题。这时候可能不一定懂，先放着，先实现案例或者简单的业务。然后边实践边琢磨问题和背后的原理
 - 注意事项介绍
     - 避免一开始就研究原理，或者把C/C++整体学习一遍，那样会比较辛苦。焦点先放在JNI通信流程上，写案例学习
@@ -101,79 +105,86 @@
 
 
 #### 2.1 NDK分层构建层
-- 要得到目标的so文件，需要有个构建环境以及过程，将这个过程和环境称为构建层。
-    - 构建层需要将C/C++代码编译为动态库so，那么这个编译的过程就需要一个构建工具，构建工具按照开发者指定的规则方式来构建库文件，类似apk的Gradle构建过程。
-- 在讲解NDK构建工具之前，我们先来了解一些关于CPU架构的知识点：Android abi
-    - ABI即Application Binary Interface，定义了二进制接口交互规则，以适应不同的CPU，一个ABI对应一种类型的CPU。
+- 要得到目标的`so`文件，需要有个构建环境以及过程，将这个过程和环境称为构建层。
+    - 构建层需要将`C/C++`代码编译为动态库`so`，那么这个编译的过程就需要一个构建工具，构建工具按照开发者指定的规则方式来构建库文件，类似`apk`的`Gradle`构建过程。
+- 在讲解NDK构建工具之前，我们先来了解一些关于CPU架构的知识点：`Android abi`
+    - `ABI`即`Application Binary Interface`，定义了二进制接口交互规则，以适应不同的CPU，一个ABI对应一种类型的CPU。
 - Android目前支持以下7种ABI：
     - 1.armeabi：第5代和6代的ARM处理器，早期手机用的比较多。
     - 2.armeabi-v7a:第7代及以上的 ARM 处理器。
     - 3.arm64-v8a:第8代，64位ARM处理器。
     - 4.x86:一般用在平板，模拟器。
     - 5.x86_64:64位平板。
-- 常规的NDK构建工具有两种：
-    - 1.ndk-build：
-    - 2.Cmake
-- ndk-build其实就是一个脚本。早期的NDK开发一直都是使用这种模式
+- 常规的`NDK`构建工具有两种：
+    - 1.`ndk-build`。早期一般使用这种模式！
+    - 2.`Cmake`。推荐使用这种方式，简洁！
+- `ndk-build`其实就是一个脚本。早期的NDK开发一直都是使用这种模式
     - 运行ndk-build相当于运行一下命令：$GNUMAKE -f <ndk>/build/core/build-local.mk
     - $GNUMAKE 指向 GNU Make 3.81 或更高版本，<ndk> 则指向 NDK 安装目录
     - 使用ndk-build需要配合两个mk文件：Android.mk 和 Application.mk。
-- Cmake是一个编译系统的生成器
-    - 简单理解就是，他是用来生成makefile文件的，Android.mk其实就是一个makefile类文件，cmake使用一个CmakeLists.txt的配置文件来生成对应的makefile文件。
+- `Cmake`是一个编译系统的生成器
+    - 简单理解就是，他是用来生成makefile文件的，`Android.mk`其实就是一个makefile类文件，cmake使用一个`CmakeLists.txt`的配置文件来生成对应的`makefile`文件。
     - Cmake构建so的过程其实包括两步：步骤1：使用Cmake生成编译的makefiles文件；步骤2：使用Make工具对步骤1中的makefiles文件进行编译为库或者可执行文件。
-    - Cmake优势在哪里呢？在生成makefile过程中会自动分析源代码，创建一个组件之间依赖的关系树，这样就可以大大缩减在make编译阶段的时间。
+    - **Cmake优势在哪里呢？在生成makefile过程中会自动分析源代码，创建一个组件之间依赖的关系树，这样就可以大大缩减在make编译阶段的时间**。
 - Cmake构建项目配置
-    - 使用Cmake进行构建需要在build.gradle配置文件中声明externalNativeBuild
+    - 使用Cmake进行构建需要在build.gradle配置文件中声明`externalNativeBuild`。
 
 
 
 #### 2.2 NDK分层Java层
 - 如何选择正确的so库呢
-    - 通常情况下，我们在编译so的时候就需要确定自己设备类型，根据设备类型选择对应abiFilters。
-    - 注意：使用as编译后的so会自动打包到apk中，如果需要提供给第三方使用，可以到build/intermediates/cmake/debug or release 目录中copy出来。
+    - 通常情况下，我们在编译so的时候就需要确定自己设备类型，根据设备类型选择对应`abiFilters`。
+    - 注意：使用`as`编译后的`so`会自动打包到`apk`中，如果需要提供给第三方使用，可以到`build/intermediates/cmake/debug or release `目录中`copy`出来。
 - Java层如何调用so文件中的函数
     - 对于Android上层代码来说，在将包正确导入到项目中后，只需要一行代码就可以完成动态库的加载过程。有两种方式：
     ```
     System.load("/data/local/tmp/native_lib.so"); 
     System.loadLibrary("native_lib");
     ```
-    - 1.加载路径不同：load是加载so的完整路径，而loadLibrary是加载so的名称，然后加上前缀lib和后缀.so去默认目录下查找。
-    - 2.自动加载库的依赖库的不同：load不会自动加载依赖库；而loadLibrary会自动加载依赖库。
-- 无论哪种方式，最终都会调用到LoadNativeLibrary()方法，该方法主要操作：
-    - 1.通过dlopen打开动态库文件
-    - 2.通过dlsym找到JNI_OnLoad符号所对应的方法地址
-    - 3.通过JNI_OnLoad去注册对应的jni方法
+    - 1.加载路径不同：`load`是加载`so`的完整路径，而`loadLibrary`是加载`so`的名称，然后加上前缀lib和后缀.so去默认目录下查找。
+    - 2.自动加载库的依赖库的不同：load不会自动加载依赖库；而`loadLibrary`会自动加载依赖库。
+- 无论哪种方式，最终都会调用到`LoadNativeLibrary()`方法，该方法主要操作：
+    - 1.通过`dlopen`打开动态库文件
+    - 2.通过`dlsym`找到`JNI_OnLoad`符号所对应的方法地址
+    - 3.通过`JNI_OnLoad`去注册对应的`jni`方法
 
 
 
 #### 2.3 Native层
-- 如何理解JNI的设计思想
-    - JNI（全名Java Native Interface）Java native接口，其可以让一个运行在Java虚拟机中的Java代码被调用或者调用native层的用C/C++编写的基于本机硬件和操作系统的程序。简单理解为就是一个连接Java层和Native层的桥梁。
-    - 开发者可以在native层通过JNI调用到Java层的代码，也可以在Java层声明native方法的调用入口。
-- JNI注册方式
-    - 当Java代码中执行Native的代码的时候，首先是通过一定的方法来找到这些native方法。JNI有静态注册和动态注册两种注册方式。
-    - 静态注册先由Java得到本地方法的声明，然后再通过JNI实现该声明方法。动态注册先通过JNI重载JNI_OnLoad()实现本地方法，然后直接在Java中调用本地方法。
+- 如何理解`JNI`的设计思想
+    - `JNI`（全名Java Native Interface）`Java native`接口，其可以让一个运行在`Java`虚拟机中的`Java`代码被调用或者调用`native`层的用`C/C++`编写的基于本机硬件和操作系统的程序。简单理解为就是一个连接Java层和Native层的桥梁。
+    - 开发者可以在`native`层通过`JNI`调用到`Java`层的代码，也可以在`Java`层声明`native`方法的调用入口。
+- `JNI`注册方式
+    - 当`Java`代码中执行`Native`的代码的时候，首先是通过一定的方法来找到这些`native`方法。`JNI`有静态注册和动态注册两种注册方式。
+    - 静态注册先由Java得到本地方法的声明，然后再通过JNI实现该声明方法。
+    - 动态注册先通过JNI重载`JNI_OnLoad()`实现本地方法，然后直接在Java中调用本地方法。
 
 
 
 ### 03.JNI基础语法
 #### 3.1 JNI三种引用
-- 在JNI规范中定义了三种引用：
+- 在`JNI`规范中定义了三种引用：
     - 局部引用（Local Reference）、全局引用（Global Reference）、弱全局引用（Weak Global Reference）。
-- Local引用
-    - JNI中使用 jobject, jclass, and jstring等来标志一个Java对象，然而在JNI方法在使用的过程中会创建很多引用类型，如果使用过程中不注意就会导致内存泄露。
-    - 直接使用：NewLocalRef来创建。Local引用其实就是Java中的局部引用，在声明这个局部变量的方法结束或者退出其作用域后就会被GC回收。
-- Global引用全局引用
+- `Local`局部引用
+    - `JNI`中使用 jobject, jclass, and jstring等来标志一个`Java`对象，然而在`JNI`方法在使用的过程中会创建很多引用类型，如果使用过程中不注意就会导致内存泄露。
+    - 直接使用：`NewLocalRef`来创建。`Local`引用其实就是`Java`中的局部引用，在声明这个局部变量的方法结束或者退出其作用域后就会被GC回收。
+- `Global`全局引用
     - 全局引用可以跨方法、跨线程使用，直到被开发者显式释放。一个全局引用在被释放前保证引用对象不被GC回收。
-    - 和局部应用不同的是，能创建全局引用的函数只有NewGlobalRef，而释放它需要使用ReleaseGlobalRef函数。
-- Weak引用
+    - 和局部应用不同的是，能创建全局引用的函数只有`NewGlobalRef`，而释放它需要使用`ReleaseGlobalRef`函数。
+- `Weak`弱全局引用
     - 弱引用可以使用全局声明的方式。弱引用在内存不足或者紧张的时候会自动回收掉，可能会出现短暂的内存泄露，但是不会出现内存溢出的情况。
 
 
 #### 3.2 JNI异常处理
+- JNI中异常处理说明
+    - `jni`中没有`try...catch...throw`等方法来处理异常，引发的异常的env对象不处理，会继续运行至下一个`env`对象之前。此时需要通过`env`来处理异常。
 - native层异常
     - 处理方式1：native层自行处理
     - 处理方式2：native层抛出给Java层处理
+    - 处理方式3：抛出致命异常 程序退出
+- 其他
+    - https://blog.csdn.net/u011468147/article/details/126428965
+    - https://blog.csdn.net/u011468147/article/details/126428965
 
 
 #### 3.4 JNI核心原理
@@ -268,6 +279,17 @@
     - 2.2 BaseDexClassLoader#findLibrary，其中pathList的类型为DexPathList
     - 2.3 DexPathList#findLibrary，这里收集了apk的so目录，一般位于：/data/app/${package-name}/lib/arm/。还有系统的so目录：System.getProperty(“java.library.path”)，可以打印看一下它的值：/vendor/lib:/system/lib，其实就是前后两个目录，事实上64位系统是/vendor/lib64:/system/lib64。最终查找so文件的时候就会在这三个路径中查找，优先查找apk目录。
 
+
+
+#### 4.5 CMake工作流程
+- CMake简单介绍
+    - Android NDK 支持使用 CMake 编译应用的 C 和 C++ 代码。该工具主要作用是，将C/C++编写的native源文件编译打包生成库文件（包含动态库或者静态库文件），集成到Android中使用。
+- CMake 工具链文件
+    - NDK 通过工具链文件支持 CMake。工具链文件是用于自定义交叉编译工具链行为的 CMake 文件。在以下位置：/build/cmake/android.toolchain.cmake。
+    - 注意：如果安装了 Android SDK，则 NDK 安装在 SDK 目录的以下位置：ndk/version/ 或 ndk-bundle/。
+- CMake工作用法
+    - 第一种方式：Gradle。使用 externalNativeBuild 时，系统会自动使用 CMake 工具链文件。详情请参阅 Android Studio 的向您的项目添加 C 和 C++ 代码指南。
+    - 第二种方式：命令行。具体可以看：https://blog.csdn.net/hnjzfwy/article/details/134121169
 
 
 
