feat：jni异常接口调用完善案例

--- a/Read/ReadJava/15.并发设计模式研究.md
+++ b/Read/ReadJava/15.并发设计模式研究.md
@@ -91,8 +91,8 @@
 - 享元模式本质上其实就是一个对象池
     - 利用享元模式创建对象的逻辑也很简单：创建之前，首先去对象池里看看是不是存在；如果已经存在，就利用对象池里的对象；如果不存在，就会新创建一个对象，并且把这个新创建出来的对象放进对象池里。
 - Long 这个类并没有照搬享元模式
-    - Long 内部维护了一个静态的对象池，仅缓存了[-128,127]之间的数字，这个对象池在 JVM 启动的时候就创建好了，而且这个对象池一直都不会变化，也就是说它是静态的。
-    - 之所以采用这样的设计，是因为 Long 这个对象的状态共有 264 种，实在太多，不宜全部缓存，而[-128,127]之间的数字利用率最高。
+    - Long 内部维护了一个静态的对象池，仅缓存了(-128,127)之间的数字，这个对象池在 JVM 启动的时候就创建好了，而且这个对象池一直都不会变化，也就是说它是静态的。
+    - 之所以采用这样的设计，是因为 Long 这个对象的状态共有 264 种，实在太多，不宜全部缓存，而(-128,127)之间的数字利用率最高。
 
 
 #### 2.6 Immutability注意点
