--- a/Read/ReadProject/36.NDK开发设计实践.md
+++ b/Read/ReadProject/36.NDK开发设计实践.md
@@ -12,10 +12,11 @@
 - 03.JNI基础语法
     - 3.1 JNI三种引用
     - 3.2 JNI异常处理
-    - 3.3 C和C++互相调用
+    - 3.3 JNI异常接口
     - 3.4 JNI核心原理
     - 3.5 注册Native函数
     - 3.6 JNI签名是什么
+    - 3.7 C和C++互相调用
 - 04.一些必备操作
     - 4.1 so库生成打包
     - 4.2 so库查询操作
@@ -104,6 +105,8 @@
     - 3.native层
 
 
+
+
 #### 2.1 NDK分层构建层
 - 要得到目标的`so`文件，需要有个构建环境以及过程，将这个过程和环境称为构建层。
     - 构建层需要将`C/C++`代码编译为动态库`so`，那么这个编译的过程就需要一个构建工具，构建工具按照开发者指定的规则方式来构建库文件，类似`apk`的`Gradle`构建过程。
@@ -175,16 +178,129 @@
     - 弱引用可以使用全局声明的方式。弱引用在内存不足或者紧张的时候会自动回收掉，可能会出现短暂的内存泄露，但是不会出现内存溢出的情况。
 
 
+
 #### 3.2 JNI异常处理
 - JNI中异常处理说明
     - `jni`中没有`try...catch...throw`等方法来处理异常，引发的异常的env对象不处理，会继续运行至下一个`env`对象之前。此时需要通过`env`来处理异常。
-- native层异常
-    - 处理方式1：native层自行处理
-    - 处理方式2：native层抛出给Java层处理
-    - 处理方式3：抛出致命异常 程序退出
-- 其他
-    - https://blog.csdn.net/u011468147/article/details/126428965
-    - https://blog.csdn.net/u011468147/article/details/126428965
+- 什么是JNI异常
+    - JNI标准没有定义自己的异常，JNI使用的都是java定义的异常，所以在JNI层只可能有C/C++定义的异常 和 java定义的异常，后面我们简称C/C++异常 和 java异常。
+    - 举个例子，通过JNI定义的CallVoidMethod接口调用java方法时，若java方法抛出异常，那么CallVoidMethod方法就会在JNI层抛出这个异常，jvm已经帮我们完成了JNI层和java层抛出异常的“互联互通”工作。
+- JNI异常处理方式，JNI层可以有java异常 和 C/C++异常，那如何处理JNI层的两种异常呢？
+    - 处理方式1：native层自行处理。JNI层抛的C/C++异常：在JNI层，通过C/C++的try...catch捕获并处理
+    - 处理方式2：native层抛出给Java层处理。JNI层抛的Java异常：在JNI层，通过JNI定义的与异常相关的接口处理 或 在java层，通过try...catch捕获并处理
+    - 处理方式3：抛出致命异常 程序退出【这种方式其实是方式1的特殊case版本】
+- JNI层异常处理方法概述
+    - JNI层的C/C++异常，通过在JNI层 使用C/C++的try...catch捕获并处理，JNI并没有定义处理C/C++异常的接口，JNI不能处理C/C++异常；
+    - JNI层的java异常，通过JNI定义的与异常相关的接口捕获并处理，若JNI层不予处理，在JNI方法结束时，会立即将该异常传递给java层，在java层通过对native 添加try...catch，捕获并处理JNI层抛出的java异常。
+- 那么JNI层抛出java异常后，若不处理，抛出异常的JNI函数会立即结束吗？（即 抛出的异常会立即传给java层吗？）
+    - 不会！JNI函数将继续往下执行，直到遇到return结束 或 没遇到return，执行一段时间后自动结束（具体会执行到函数的什么位置无法确定，一般在函数正常返回之前）
+    - 在JNI层处理java异常的接口 和 使用，以及如何将JNI接口抛出的异常传递给java层。这就涉及到JNI异常接口！
+
+
+
+#### 3.3 JNI异常接口
+- 思考：如何将JNI接口抛出的异常传递给java层？
+    - 共7个接口，前6个接口用于检测、抛出、清理异常，最后1个接口用于抛出致命错误。
+    ```
+    检查当前线程是否有待处理的异常	                            ExceptionOccurred
+    检查当前线程是否有待处理的异常	                            ExceptionCheck
+    将异常及堆栈的回溯信息输出到系统错误报告信道（一般是System.err）	ExceptionDescribe
+    清除当前线程待处理的异常	                                ExceptionClear
+    在当前线程抛出                                             Java.lang.Throwable	Throw
+    在当前线程抛出 java.lang.Throwable 或 其子类的 异常对象	    ThrowNew
+    抛出致命错误，并结束进程	                                FatalError
+    ```
+- 接口详细介绍说明
+    ``` c++
+    /**
+     * 作用：检查当前线程是否有待处理的异常
+     * @return 如果有 返回该异常的引用；如果没有 返回null
+     * @exceptions 不报异常
+     * 注意：只能检测到调用java代码时抛出的异常 或 调用JNI接口抛出的异常，即只能检测到jvm中抛出的异常
+     */
+    jthrowable ExceptionOccurred();
+     
+    /**
+     * 作用：检查当前线程是否有待处理的异常
+     * @return 如果有 返回JNI_TRUE；如果没有 返回JNI_FALSE
+     * @exceptions 不报异常
+     * 注意：只能检测到调用java代码时抛出的异常 或 调用JNI接口抛出的异常，即只能检测到jvm中抛出的异常
+     */
+    jboolean ExceptionCheck();
+     
+    /**
+     * 作用：将异常及堆栈的回溯信息输出到系统错误报告信道（一般是System.err）
+     * @exceptions 不报异常
+     */
+    void ExceptionDescribe();
+     
+    /**
+     * 作用：清除当前线程待处理的异常
+     * @exceptions 不报异常
+     */
+    void ExceptionClear();
+     
+    /**
+     * 作用：在当前线程抛出 java.lang.Throwable 异常对象JNI可以通过ExceptionOccurred获取，java层可通过try catch捕获。
+     * @param obj
+     * @return     0：异常抛出成功；负数：异常抛出失败
+     * @exceptions 要抛出的异常
+     * 注意：抛出异常后，代码将继续执行
+     */
+    int Throw(jthrowable obj);
+     
+    /**
+     * 作用：在当前线程抛出 java.lang.Throwable 或 其子类的 异常对象，JNI可以通过ExceptionOccurred获取，
+     * java层可通过try catch捕获。
+     * @param clazz 异常类的class实例
+     * @param message 异常信息
+     * @return  0：异常抛出成功；负数：异常抛出失败
+     * @exceptions 要抛出的异常
+     * 注意：抛出异常后，代码将继续执行
+     */
+    jint ThrowNew(jclass clazz, const char* message);
+     
+    /**
+     * 作用：抛出致命错误，并结束进程
+     * @param msg 错误信息
+     * 注意：调用后立即报错，然后退出应用程序，不论在JNI层还是java层都没有办法阻止，不会执行函数后面代码
+     */
+    void FatalError(const char* msg);
+    ```
+- 接口使用，JNI层如何捕获异常和抛出异常。
+    ``` c++
+    //JNI层异常处理例子
+    void testException(JNIEnv * env){
+        //1 模拟JNI接口 或 JNI调用的java方法 抛出的异常
+        throwException(env,"java/lang/IllegalStateException","我是JNI，我这儿有异常");
+        //2 在每个可能抛出异常的JNI接口后面 检测 是否有异常发生
+        if(env->ExceptionCheck()){
+            //3 获取并缓存JNI层的java异常，用于后续再次抛出
+            jthrowable throwable = env->ExceptionOccurred();
+            //4 清除JNI层抛出的java异常
+            env->ExceptionClear();
+            //5 TODO:JNI层发生异常的处理逻辑
+            //6 重新抛出异常，目的是让java层也收到该异常，并通过try catch捕获并执行java层的相应逻辑
+            env->Throw(throwable);
+            //7 删除局部引用
+            env->DeleteLocalRef(throwable);
+            //8 结束方法，JNI抛出的java异常 传递 到java层
+            return;
+        }
+        // 抛出异常后，如果不处理，会执行该循环
+        for(int i = 0; i < 1000; i++){
+            __android_log_write(ANDROID_LOG_ERROR, "yy", std::to_string(i).c_str());
+        }
+    }
+    ```
+- JNI接口异常使用总结和注意事项：
+    - （1）在JNI层，可以有C/C++异常 和 java异常，JNI没有定义自己的异常。
+    - （2）JNI定义的和异常相关的接口只能抛出或处理java异常。
+    - （3）JNI接口抛出java异常后，会继续执行一段时间，然后在正常返回前自动退出，除非遇到return；java层遇到异常则不会执行后续代码，直接执行catch代码块。
+    - （4）JNI和java可以相互捕获并处理对方抛出的java异常。
+    - （5）FatalError接口无法被捕获，一经调用就会退出进程。
+    - （6）JNI层处理java异常时，记得将异常再次抛出到java层，让java层也执行异常捕获逻辑
+
 
 
 #### 3.4 JNI核心原理
@@ -193,6 +309,8 @@
 - JNIEnv是什么？
     - JINEnv是当前Java线程的执行环境，一个JVM对应一个JavaVM结构体，一个JVM中可能创建多个Java线程，每个线程对应一个JNIEnv结构，它们保存在线程本地存储TLS中。
     - 因此不同的线程JNIEnv不同，而不能相互共享使用。 JavaEnv结构也是一个函数表，在本地代码通过JNIEnv函数表来操作Java数据或者调用Java方法。
+- JavaVM是什么？
+    - 待完善
 
 
 
@@ -216,6 +334,10 @@
     - 如果拥有一个该函数的签名信息和这个函数的函数名，就可以顺序的找到对应的Java层中的函数。
 - 如何查看签名呢：可以使用javap命令。
     - javap -s -p MainActivity.class
+
+
+
+#### 3.7 C和C++互相调用
 
 
 
