--- a/Read/ReadJava/15.并发设计模式研究.md
+++ b/Read/ReadJava/15.并发设计模式研究.md
@@ -2,6 +2,7 @@
 - 01.并发设计模式介绍
     - 1.1 不可变解决并发
     - 1.2 COW解决并发
+    - 1.3 线程本地存储模式
 - 02.不变性模式解读
     - 2.1 解决并发问题
     - 2.2 实现不可变性的类
@@ -9,6 +10,21 @@
     - 2.4 不可变修改操作
     - 2.5 享元模式的优化
     - 2.6 Immutability注意点
+- 03.COW策略模式解读
+    - 3.1 为何有COW模式
+    - 3.2 COW应用场景
+    - 3.3 RPC框架应用COW分析
+    - 3.4 COW如何解决并发
+    - 3.5 COW内存消耗
+    - 3.6 COW为何没有LinkedList
+- 04.线程本地存储解读
+    - 4.1 为何局部变量线程安全
+    - 4.2 理解线程本地存储
+    - 4.3 线程本地存储场景
+    - 4.4 ThreadLocal核心设计
+    - 4.5 ThreadLocal内存泄漏
+    - 4.6 ThreadLocal缺点
+    - 4.7 避免共享解决并发总结
 
 
 
@@ -114,6 +130,72 @@
       }
     }
     ```
+
+
+
+
+### 03.COW策略模式解读
+#### 3.1 为何有COW模式
+- 先来看一个案例，看看String类中replace方法
+    - Java 里 String 这个类在实现 replace() 方法的时候，并没有更改原字符串里面 value[]数组的内容，而是创建了一个新字符串，这种方法在解决不可变对象的修改问题时经常用到。
+    - 如果深入地思考这个方法，你会发现它本质上是一种 Copy-on-Write 方法。所谓 Copy-on-Write，经常被缩写为 COW 或者 CoW，顾名思义就是写时复制。
+    - 不可变对象的写操作往往都是使用 Copy-on-Write 方法解决的，当然 Copy-on-Write 的应用领域并不局限于 Immutability 模式。
+
+
+
+
+#### 3.2 COW应用场景
+- 常见的Copy-on-Write模式应用
+    - CopyOnWriteArrayList 和 CopyOnWriteArraySet 这两个 Copy-on-Write 容器，它们背后的设计思想就是 Copy-on-Write；
+    - 通过 Copy-on-Write 这两个容器实现的读操作是无锁的，由于无锁，所以将读操作的性能发挥到了极致。
+    - Java 提供的 Copy-on-Write 容器，由于在修改的同时会复制整个容器，所以在提升读操作性能的同时，是以内存复制为代价的。
+- Java中的Copy-on-Write 容器使用建议
+    - CopyOnWriteArrayList 和 CopyOnWriteArraySet 这两个 Copy-on-Write 容器在修改的时候会复制整个数组，如果容器经常被修改或者这个数组本身就非常大的时候，是不建议使用的。
+    - 反之，如果是修改非常少、数组数量也不大，并且对读性能要求苛刻的场景，使用 Copy-on-Write 容器效果就非常好了。
+- Copy-on-Write 其实就是在操作系统领域
+    - Unix 的操作系统中创建进程的 API 是 fork()，传统的 fork() 函数会创建父进程的一个完整副本，例如父进程的地址空间现在用到了 1G 的内存，那么 fork() 子进程的时候要复制父进程整个进程的地址空间（占有 1G 内存）给子进程，这个过程是很耗时的。
+    - Linux 中的 fork() 函数就聪明得多，fork() 子进程的时候，并不复制整个进程的地址空间，而是让父子进程共享同一个地址空间；只用在父进程或者子进程需要写入的时候才会复制地址空间，从而使父子进程拥有各自的地址空间。
+    - 父子进程的地址空间以及数据都是要隔离的，**使用 Copy-on-Write 更多地体现的是一种延时策略，只有在真正需要复制的时候才复制**，而不是提前复制好，同时 Copy-on-Write 还支持按需复制，可以提升性能。
+
+
+
+
+
+#### 3.3 RPC框架应用COW分析
+
+
+#### 3.4 COW如何解决并发
+
+
+#### 3.5 COW内存消耗
+
+
+#### 3.6 COW为何没有LinkedList
+
+
+### 04.线程本地存储解读
+#### 4.1 为何局部变量线程安全
+
+
+#### 4.2 理解线程本地存储
+
+
+#### 4.3 线程本地存储场景
+
+
+#### 4.4 ThreadLocal核心设计
+
+
+#### 4.5 ThreadLocal内存泄漏
+
+
+
+#### 4.6 ThreadLocal缺点
+
+
+#### 4.7 避免共享解决并发总结
+
+
 
 
 
