feat：完善并发笔记总结

--- a/Read/ReadJava/15.并发设计模式研究.md
+++ b/Read/ReadJava/15.并发设计模式研究.md
@@ -27,6 +27,17 @@
     - 4.7 避免共享解决并发总结
 
 
+### 01.并发设计模式介绍
+#### 1.1 不可变解决并发
+
+
+#### 1.2 COW解决并发
+
+
+#### 1.3 线程本地存储模式
+
+
+
 
 ### 02.不变性模式解读
 #### 2.1 解决并发问题
@@ -175,6 +186,14 @@
 
 ### 04.线程本地存储解读
 #### 4.1 为何局部变量线程安全
+- 两个线程可以同时用不同的参数调用相同的方法，那调用栈和线程之间是什么关系呢？
+    - 答案是：每个线程都有自己独立的调用栈。因为如果不是这样，那两个线程就互相干扰了。
+    - 如下面这幅图所示，线程 A、B、C 每个线程都有自己独立的调用栈。
+    - ![image](https://img-blog.csdnimg.cn/direct/bea6739edda140f8b0e3ce2c7b60053c.png)
+- Java 方法里面的局部变量是否存在并发问题？
+    - 现在你应该很清楚了，一点问题都没有。因为每个线程都有自己的调用栈，局部变量保存在线程各自的调用栈里面，不会共享，所以自然也就没有并发问题。
+    - 再次重申一遍：没有共享，就没有伤害。
+
 
 
 #### 4.2 理解线程本地存储
