--- a/Read/ReadProject/05.心跳和轮询方案设计.md
+++ b/Read/ReadProject/05.心跳和轮询方案设计.md
@@ -4,14 +4,16 @@
     - 1.2 什么是轮询
     - 1.3 什么是心跳
     - 1.4 需求技术分析
-    - 1.5 推送和轮询对比
+    - 1.5 心跳和轮询对比
+    - 1.6 推送中心跳和轮询
 - 02.常见思路和做法
-    - 2.1 实现业务轮训思路
-    - 2.2 Thread.sleep实现轮询
-    - 2.3 ScheduledExecutorService实现轮询
-    - 2.4 Timer实现定时性周期性任务轮训
-    - 2.5 使用Handler不断发送消息来实现轮训
-    - 2.6 采用AlarmManager实现轮询
+    - 2.0 实现业务轮训思路
+    - 2.1 Thread.sleep实现轮询
+    - 2.2 ScheduledExecutorService实现轮询
+    - 2.3 Timer实现定时性周期性任务轮训
+    - 2.4 使用Handler不断发送消息来实现轮训
+    - 2.5 采用AlarmManager实现轮询
+    - 2.6 使用Socket实现心跳
     - 2.7 各种方式有什么区别
     - 2.8 执行轮询任务分析
 - 03.各种方式性能分析
@@ -20,12 +22,14 @@
     - 3.3 Timer实现轮询性能分析
     - 3.4 Handler实现轮询性能分析
     - 3.5 AlarmManager实现轮询分析
+    - 3.6 Socket实现心跳性能分析
 - 04.各种方式原理解读
     - 4.1 sleep实现轮询原理解读
     - 4.2 线程池实现轮询原理解读
     - 4.3 Timer实现轮询原理解读
     - 4.4 Handler实现轮询原理解读
     - 4.5 AlarmManager实现原理解读
+    - 4.6 Socket实现心跳原理解读
 
 
 
@@ -36,15 +40,17 @@
 - 实时推送
     - 使用轮询的方式可以实现实时推送功能。当客户端连接到服务器之后，服务器就可以通过轮询不断的向客户端推送实时消息。
 - 监控系统
-    - 轮询可以实现监控系统的功能。当需要监控某个系统的状态时，可以使用轮询不断的查询该系统的状态信息，并及时的进行预防措施，或者做数据上报操作。
+    - 实现监控系统的功能。当需要监控某个系统的状态时，可以使用轮询不断的查询该系统的状态信息，并及时的进行预防措施，或者做数据上报操作。用轮询！
 - 二维码扫码
-    - 比如超市的支付硬件设备，会一直轮训扫码。当你靠近二维码支付的时候，就立马读取到二维码数据进行支付。
+    - 比如超市的支付硬件设备，会一直轮训扫码。当你靠近二维码支付的时候，就立马读取到二维码数据进行支付。用轮询！
+- 即时通信聊天
+    - 比如你跟某个人聊天，这个时候你们两个之间的通信，则会使用建立长链接。用心跳！
 
 
 
 #### 1.2 什么是轮询
 - 轮询（Poll）
-    - 是一种计算机程序查询状态的方式，是指定期访问一个或多个设备或其他资源以获取它们的状态。
+    - 是一种计算机程序查询状态的方式，是指定期访问一个或多个设备或其他资源以获取它们的状态。Android端间隔固定时间主动做一些事情，相比而言，耗电，占用资源，消息可能会延迟。
 - 简单理解轮询
     - 简单理解就是 App 端每隔一定的时间重复请求的操作就叫做轮询操作，比如：App 端每隔一段时间上报一次定位信息，App 端每隔一段时间拉去一次用户状态等，这些应该都是轮询请求。
 
@@ -65,11 +71,19 @@
 
 
 
-#### 1.5 推送和轮询对比
-- 轮询：基于拉取（Pull）。
-    - Android端间隔固定时间主动去请求服务端，获取相关数据，然后进行通知，相比而言，耗电，占用资源，消息可能会延迟。
-- 推送：基于推送（Push）。
-    - 服务端有数据时去通知Android端，比较及时
+#### 1.5 心跳和轮询对比
+- 心跳与轮询的区别
+    - 主机在检查与从机之间的连接（判断与从机之间的连接是否断开）时，一般有心跳与轮询这两种方式。这两个方式都需要主机定时逐个查询从机的状态，但它们查询的策略有所不同。
+- 轮询
+    - 在轮询方式中，主机逐个查询的方式是主动向从机发送一条查询信息，然后根据从机的应答情况来判断从机的状态。
+    - 比方说，主机要求从机返回一个状态码来代表当前从机所处的状态，但如果从机没有应答，就认为与从机之间的连接已经断开。
+- 心跳
+    - 在心跳方式中，主机逐个查询的方式是直接从一种状态信息表中查询，此状态信息表上记录了所有从机的状态信息，而此状态信息表是由各个从机自己主动去更新的。
+    - 如果有从机长期没有去更新此表，就认为与该从机之间的连接已经断开。
+
+
+
+#### 1.6 推送中心跳和轮询
 
 
 
@@ -169,6 +183,8 @@
     Log.i("LoopRequestService", "LoopService关闭轮询服务...");
     context.stopService(intent);
     ```
+- 针对AlarmManager和Service之间的任务心跳处理
+
 
 
 
