--- a/Read/ReadBlogWiki/4.17金字塔汇报方法.md
+++ b/Read/ReadBlogWiki/4.17金字塔汇报方法.md
@@ -1,6 +1,6 @@
 #### 目录介绍
 - 01.前言简单的介绍
-- 02.什么是金字塔原理
+- 02.金字塔原理总结
 - 03.金字塔四大原则
 - 04.金字塔汇报法
 - 05.拥有结构化思维
@@ -13,15 +13,19 @@
 ### 01.前言简单的介绍
 #### 1.1 汇报的时候踩坑
 - 如果你汇报的时候，只是把总结得到的内容单纯地罗列出来，是很容易踩坑的。
-- 比如我以前就经常遇到这样的汇报场景：上级直接打断汇报者说：“不要讲这么多细节，挑重点讲！”总监点评某个团队的汇报时说：“感觉你们团队做了很多事情，团队也很辛苦，但没看到有什么关键结果或者突破！”你汇报完之后，某大佬问：“能不能用一两句话概括一下这一年的工作？”
+- 比如我以前就经常遇到这样的汇报场景：上级直接打断汇报者说：“不要讲这么多细节，挑重点讲！”
+- 总监点评某个团队的汇报时说：“感觉你们团队做了很多事情，团队也很辛苦，但没看到有什么关键结果或者突破！”
+- 你汇报完之后，某大佬问：“能不能用一两句话概括一下这一年的工作？”
 
 
 
 #### 1.2 为何领导不满意呢
-- 为什么在这些场景中，领导都觉得不满意呢？因为汇报的逻辑和总结的逻辑是不同的，总结主要是面向自己做梳理，更强调自己个人的贡献，以及事情的价值和细节；而汇报主要是面向领导做组织提炼，更看重团队整体的结果，以及事情的逻辑和关键。
+- 为什么在这些场景中，领导都觉得不满意呢？因为汇报的逻辑和总结的逻辑是不同的。
+- 总结主要是面向自己做梳理，更强调自己个人的贡献，以及事情的价值和细节；而汇报主要是面向领导做组织提炼，更看重团队整体的结果，以及事情的逻辑和关键。
 
 
-### 02.什么是金字塔原理
+
+### 02.金字塔原理总结
 - 金字塔原理：是一种重点突出、逻辑清晰、主次分明的逻辑思路、表达方式和规范动作。
 - 核心思想是任何事情都可以归纳出一个中心思想，中心思想可由三至七个论点支持，每个论点可以由三至七个论据支撑，这样延伸下去，形状像一个金字塔，所以才叫金字塔原理。
 - ![image](https://img-blog.csdnimg.cn/20210607210115555.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L20wXzM3NzAwMjc1,size_16,color_FFFFFF,t_70)
@@ -79,7 +83,8 @@
 
 
 #### 4.1 总体结论
-- 从全局概括整体的工作或者项目情况，得出关键性的结论，让听众整体上知道做得怎么样，形成做得好、做的一般、不达预期或遇到很大困难等直观印象。这个部分按照金字塔原理来分析和阐述，包括一个总的结论（总体介绍）和几个主要的分论点，PPT 页数一般不超过 3 页，分论点的数量建议 1～3 个，每个分论点再给出 3～5 个论据。
+- 从全局概括整体的工作或者项目情况，得出关键性的结论，让听众整体上知道做得怎么样，形成做得好、做的一般、不达预期或遇到很大困难等直观印象。
+- 这个部分按照金字塔原理来分析和阐述，包括一个总的结论（总体介绍）和几个主要的分论点，PPT 页数一般不超过 3 页，分论点的数量建议 1～3 个，每个分论点再给出 3～5 个论据。
 
 
 #### 4.2 具体分析
