--- a/Read/ReadJava/11.变量的线程安全探索.md
+++ b/Read/ReadJava/11.变量的线程安全探索.md
@@ -8,6 +8,9 @@
     - 2.5 调用栈与线程关系
     - 2.6 没有共享无并发
 - 03.全局变量线程不安全
+    - 3.1 全局变量为何不安全
+    - 3.2 全局变量存哪里
+    - 3.3
 - 04.静态变量线程安全
 
 
@@ -38,7 +41,7 @@
 
 #### 2.2 方法如何被执行
 - 方法是如何被执行的
-    - 例如上面的r[i] = r[i-2] + r[i-1];翻译成 CPU 的指令相对简单，可方法的调用就比较复杂了。
+    - 例如上面的r【i】 = r【i-2】 + r【i-1】；翻译成 CPU 的指令相对简单，可方法的调用就比较复杂了。
     - 例如下面这三行代码：第 1 行，声明一个 int 变量 a；第 2 行，调用方法 fibonacci(a)；第 3 行，将 b 赋值给 c。
     ```
     int a = 7；
