--- a/Read/ReadJava/15.并发设计模式研究.md
+++ b/Read/ReadJava/15.并发设计模式研究.md
@@ -198,7 +198,9 @@
 
 
 #### 4.2 理解线程本地存储
-
+- 没有共享变量也不会有并发问题，如何避免共享呢？
+    - 思路其实很简单，对应到并发编程领域，就是每个线程都拥有自己的变量，彼此之间不共享，也就没有并发问题。
+    - Java 语言提供的线程本地存储（ThreadLocal）就能够做到。
 
 
 
