--- a/Read/ReadBlogWiki/6.1职场晋升的规则.md
+++ b/Read/ReadBlogWiki/6.1职场晋升的规则.md
@@ -1,10 +1,11 @@
 #### 目录介绍
 - 01.职场晋升的原则
-- 02.提前做下级的事
-- 03.做好当前级别事
-- 04.熟练和精通区别
-- 05.主动揽活和思考
-- 06.通用的晋升步骤
+- 02.职场晋升的流程
+- 03.提前做下级的事
+- 04.做好当前级别事
+- 05.熟练和精通区别
+- 06.主动揽活和思考
+- 07.通用的晋升步骤
 
 
 
@@ -84,42 +85,79 @@
 
 
 
-### 02.提前做下级的事
+### 02.职场晋升的流程
+#### 2.1 职场晋升六阶段
+- 一次完整的晋升流程，一般可以分为 6 个阶段：
+- 提名阶段：主管决定要不要提名你去参加晋升。必须要符合提名晋升的条件！
+- 预审阶段：部门对提名的名单进行预审，如果你跟其他竞争者 PK 失败，就失去了晋升机会。针对提名晋升的名单，进行部门内的一次横向拉通对比。
+- 评审阶段：评委团对你进行评审，考察你的能力有没有满足要求。这块需要你做预晋升工作汇报！
+- 复审阶段：部门对评审结果进行复审，确认你的晋升结果。复审阶段主要是通过总体的数据来判断晋升情况。
+- 审批阶段：复审的结果上报高层审批，审批通过之后，你的晋升结果就最终确定了。然后确定薪资涨幅和股权激励之类的方案。
+- 沟通阶段：主管或 HR 跟你沟通晋升结果。无论你的晋升通过还是不通过，你的主管都需要明确地给出指导意见，并安排相应的工作来帮助你成长。
+
+
+
+
+#### 2.2 晋升需先提名
+- 硬性条件如果你想申请晋升，至少要满足以下 4 个条件：
+- **绩效条件**：你的绩效不能差，至少要达到“正常”水平。
+- **年限条件**：你在当前级别的工作年限，必须满足晋升的硬性规定。不同职级体系要求不同，必须达到年限要求。
+- **红线条件**：有的公司有内部处罚的政策，要是违反这些政策，你就会被取消当年甚至几年之内的晋升资格。
+- **附加条件**：有的公司为了鼓励员工重视某些事情，可能会将它跟晋升挂钩，最典型的就是专利，或者开源影响力。
+- 并不是只要满足这四个条件，你就一定能够申请晋升。至于你的能力有没有达到下一级别的要求，没法硬性规定，只能由人来判断。
+
+
+
+
+#### 2.3 评审阶段最重要
+- 整个晋升流程中最核心的阶段是评审阶段。你需要向评委团展现自己的能力，并且经受他们的考察。这个阶段的标准流程可以分为 5 个环节：
+- ![image](https://static001.geekbang.org/resource/image/88/04/888dd36yyd7af71bb4b5b59346d80804.jpg)
+- 第一步：选手答辩。整个评审阶段和多人面试基本类似，你需要先准备答辩 PPT（材料准备），然后面对评委团（3 个以上评委）先进行自述，展现自己的亮点（晋升自述）。
+- 第二步：评委考察。会有多个评委来通过问答的方式来对你进行考察，验证和判断你是否达到了晋升要求（晋升答辩）。答辩完成后，评委会指出你的优缺点，并提出后续改进建议。
+- 第三步：给予结果。评委团基于答辩情况以及评委们的判断，做出你是否晋升通过的判断，但这个环节的结果还不是最终晋升结果（结果确定）。
+- 评委团的不确定性是你遇到的第一个和运气相关的因素。你无法选择晋升评委，只能尽力提升自己的能力，争取将评委团的不确定性的影响降到最低。
+
+
+
+
+
+
+### 03.提前做下级的事
 - 评委们怎么判断你有没有达到晋升的要求呢？其实很简单，他们会审查你做过的事情，看看是不是体现了下一级别需要的能力。
 
 
-#### 2.1 转变晋升思维
+#### 3.1 转变晋升思维
 - **在当前级别做下一级别事情的人，才有机会晋升。这条逻辑可能会颠覆你对晋升和工作任务安排的认知**。因为按照大部分人的想法，什么级别就做什么事情，只要做好了当前级别的事情，就可以申请晋升，然后到下一级别再去做下一级别的事情。
 - 然而实际情况是，你得提前做下一级别的事情，做好了才能申请晋升。这也就解释了为什么很多 P6 和 P7 做的事情差不多的现象。所以，如果要判断自己是不是能够申请晋升了，一种简单有效的方式是，看你做的事情是不是和下一级别的人类似。想晋升的P6就对比P7，想晋升的P7就对比P8……以此类推。
 
 
-#### 2.2 举个例子
+#### 3.2 举个例子
 - 举个例子，在一些大厂，如果你是P6级别的技术人员，想要申请P7，必须要“带过小项目或者小团队”（3～5 人左右）才有机会。如果你一直只是完成别人安排的项目任务，就算做得很熟练，也很难获得晋升机会的。
 
 
 
 
-### 03.做好当前级别事
+### 04.做好当前级别事
 - 可能会想到一条晋升的捷径：晋升通过之后，立刻跟主管要求安排下一个级别的工作。这样你就可以按照下一级别的要求来提升自己的能力，很快就能迎来下一次晋升。
 
 
-#### 3.1 把当前事做好
+#### 4.1 把当前事做好
 - 就算是同一个级别，不同的人能力也还是有差异的。主管不敢把下一个级别的事情直接交给刚晋升的人来做。只有把当前级别的事情做好了，才有机会晋升。
 
 
-#### 3.2 熟练和精通区别
+#### 4.2 熟练和精通区别
 - 可能会有疑问：我都晋升这个级别了，肯定已经具备这个级别的能力了，把这个级别的事情做好，不是理所当然的吗？其实，真实的晋升逻辑并不是这样理解的。晋升成功只是意味着你的能力达到了当前级别的基础水平，但还不一定有熟练和精通的程度。如果你还想要晋升到下一个级别，就必须先在当前级别达到精通。
 - 刚完成晋升之后，不要立刻想着做下一个级别的事，急着晋升到下一级别；而应该先考虑怎么把当前级别的事情做好，把当前级别的能力提升到“精通”的程度。基础、熟练和精通的区别。
 
 
 
 
-### 04.熟练和精通区别
-#### 4.1 如何区分两者
+### 05.熟练和精通区别
+#### 5.1 如何区分两者
 - 一个关键的问题：怎么区分基础、熟练和精通呢？这其实是一个世界难题，到目前为止，还没有明确客观的标准可以直接套用。
 
 
-#### 4.2 三者对比分析
+#### 5.2 三者对比分析
 - **基础意味着“会做”**。如果你会做某个级别要求的事情，就说明已经具备了基础能力。当然，这里的“会”是指能够独立自主地完成，而不是别人想好之后告诉你，你再按照别人的话去做。
 - **熟练意味着“做好”**。跟基础不同，熟练是指能够把当前级别的事情做好。做好体现在做事熟练，掌握了做事的最佳实践，能够保证效率和质量，能够拿到好的结果。
 - **精通意味着“优化”**。精通是指能够优化当前级别的事情，比如采取不同的方式、思维和工具来做同样的事情，并取得突破。
@@ -127,33 +165,33 @@
 
 
 
-### 05.主动揽活和思考
-#### 5.1 看一个案例分析
+### 06.主动揽活和思考
+#### 6.1 看一个案例分析
 - 主动的核心是如何提升自己的认知和工作目的性，而不是如何要求别人必须配合你和支持你。如果你主动的目标是完全基于自我实现和自我提升，没理由会碰壁，往往是因为涉及过多对他人的要求，才会遇到这个问题。当然，适当提升获得他人支持和配合的能力是有必要的，但前提是信任，你没有获得他人信任之前，这是很难做到的。
 - 先来看一个场景：某个项目或系统存在一些问题，老板或上司希望我解决掉它。这时候，很多时候，工作的目标并不是解决问题，而是解决老板的认知。比如遮掩问题，比如用临时方案去处理，而不考虑未来可能的潜在风险。如果你是个草根创业者，你上线了自己的产品并获得了一定的种子用户，你现在发现服务器频繁崩溃，你可能会先写一个自动重启脚本来拯救自己近期的睡眠，但绝不会止步于此，一定会深究原因，直到彻底查明并解决掉才会踏实。态度不同，这里的处理方式和思考深度，是完全不同的。
 - 再来看第二个场景：某个项目和系统可能存在问题，老板要我搞清楚。很多时候，所谓搞清楚，只是为了解答老板的疑惑，比如老板说，为什么广告投放转换效率这么差，或者为什么订单转化成本这么高。你找来几个同行数据发给老板，季节因素，行情价，其他大客户在投放竞价，目标是自圆其说，老板挑不出毛病，工作就完成了。但如果项目是自己的，投放的钱是自己出的，这就不一样，虽然前面的解释也都看到，但还是会深究，究竟哪个渠道数据有水分，哪个素材可能拉低了均值，一定是不达目的不罢休的深究。前者的目标是，和同行差不多就行了，而后者呢，那就不会停留在这样的目标上了。
 - 什么才是你的目标，两个场景，可能有助于理解，当你基于自己的目标，真的深究一个事情，试图去搞明白一个问题，试图去彻底解决一个问题，你所进行的思考深度，所分析的信息广度，会远远高于你为了应付别人安排所做的同样事情。而在这个过程中，你的成长速度，也会远远高于其他人。
 
 
-#### 5.2 主动思考和提升
+#### 6.2 主动思考和提升
 - 比如这段代码再实现一遍，还有哪些地方是可以优化的？这个系统现在的运行情况还能不能再改善？除了写代码，我还应该再学习些别的东西吗？我跟行业里的顶尖水平差距在哪里，该怎么弥补？
 - 常常去思考这些问题，时时拷问自己，发现自己的不足之处，然后有目的地去补足，不断提高自己的竞争优势。
 
 
 
-#### 5.3 主动承担思考
+#### 6.3 主动承担思考
 - 需要和上级领导保持良好的沟通，明确你们这个小团队要做些什么，甚至整个公司要做什么。这样，你才能确定优先级，去做那些对公司而言价值更高、影响力更大的工作，跟上整个团队前进的步调。
 - 在事情干不完的大背景下，如果想对团队的贡献更多，就应该善于找到最重要的工作，并且优先完成它们，而这恰恰是一些新员工都欠缺的技能，也是你能否成长为合格的技术骨干的关键所在。
 
 
 
-#### 5.4 做事精益求精
+#### 6.4 做事精益求精
 - 一位实习生开始接手客服工作，她几乎回复了用户发来的每一个问题，不明白的就和产品研发沟通，尽可能给用户满意的答复，在没有要求的节假日也会处理客服问题。
 - 在这个期间她对公司的产品有了详尽的了解，不仅如此，她还和运营的同学一起组织了客服标准话术，分门别类整理反馈问题给研发和产品做参考，和运营团队一起构建客服规范等等，对业务的发展起到了非常重要的作用。
 - 什么是牛人，就是交给他/她一件事，做成了，还做得挺好。然后再去做另一件更重要的事，又做成了。让正确的事持续发生。
 
 
-#### 5.5 愿意为工作拼
+#### 6.5 愿意为工作拼
 - 不是说要鼓励你加班，但如果你在职场里不得不面临加班，为什么不选择一个你喜欢的事情来做。
 - 一个信息安全专家，在休假的时候，灵光一闪，想到某系统存在一种缓冲区溢出可能性，你说他会怎么做，算了，回去上班再说？人家肯定会尽快找个地方拿出电脑来核对一下，看看自己的想法是不是可以实现，生怕被同行抢先公布出来，这种成就感，不是老板给多少钱工资带来的，这是人家骨子里的热爱和荣耀。
 - 一个热爱产品运营的人，他出去陪老婆逛街的时候都会研究别人店铺的运营手段和产品策略。
@@ -163,8 +201,8 @@
 
 
 
-### 06.通用的晋升步骤
-#### 6.1 四步方式去晋升
+### 07.通用的晋升步骤
+#### 7.1 四步方式去晋升
 - 可以推导出适用于各个级别的通用晋升步骤了。具体来说，分为以下 4 步：
 - 第 1 步，按照晋升原则的指导，在当前级别拿到好的结果，为公司创造价值，同时把当前级别要求的能力提升到精通程度（比如从 P6- 到 P6+），这样你才有机会成为晋升备选人员。
 - 第 2 步，到了精通程度之后，对照下一级别的要求来提升自己的各种能力（比如到了 P6+ 之后，按照 P7- 的要求来提升自己），为可能的晋升机会做好准备。
@@ -173,7 +211,7 @@
 
 
 
-#### 6.2 晋升的底层逻辑
+#### 7.2 晋升的底层逻辑
 - 晋升的第一条逻辑是，在当前级别做下一级别事情的人，才有机会晋升。晋升的第二条逻辑是，只有把当前级别的事情做好了，才有机会晋升。
 - 基础、熟练和精通三种水平的区别是，基础意味着会做，标志是能够独立完成；熟练意味着做好，标志是掌握最佳实践；精通意味着优化，标志是创造新的经验。
 - 通用的晋升步骤是，先把当前级别要求的能力提升到精通水平，接着按照下一级别的能力要求继续提升，然后主动寻找工作机会，尝试下一个级别的工作，最后拿着工作成果申请晋升。
