--- a/Read/ReadBlogWiki/6.2提高工作的效率.md
+++ b/Read/ReadBlogWiki/6.2提高工作的效率.md
@@ -16,7 +16,8 @@
 
 
 #### 1.1 完成开工仪式
-- 早上刚刚来到公司，是不是还没有走到工位附近就没有工作状态了？那我建议你来个最好是开工仪式，比如说收拾下桌面+清洗下茶杯+喝杯水，然后开工。对于我自己，一般都是提前30分钟到公司，形成了习惯。
+- 早上刚刚来到公司，是不是还没有走到工位附近就没有工作状态了？那我建议你来个最好是开工仪式，比如说收拾下桌面+清洗下茶杯+喝杯水，然后开工。
+- 对于我自己，一般都是提前30分钟到公司，形成了习惯。
 
 
 #### 1.2 拟好每日清单
@@ -65,7 +66,9 @@
 
 #### 2.1 打磨时间颗粒度
 - 相信大家都对这个“时间颗粒度”已经不陌生了：时间颗粒度指，一个人安排时间的基本单位，是说一个人把时间切成颗粒的意思，代表着一个人的职业化。
-- 在这里我想说的是，每个人的时间都是公平的，你我都是一样的24小时，但最终有人保证保量不拖延的完成，也有人时间花了却一事无成。如何高效利用每一分钟，才是问题的关键所在，这块我自己本身也没做好，道理简单但做到挺难。
+- 在这里我想说的是，每个人的时间都是公平的，你我都是一样的24小时，但最终有人保证保量不拖延的完成，也有人时间花了却一事无成。
+- 如何高效利用每一分钟，才是问题的关键所在，这块我自己本身也没做好，道理简单但做到挺难。
+
 
 
 #### 2.2 完成每日清单
