--- a/Read/ReadBlogWiki/7.1做事专注的锻炼.md
+++ b/Read/ReadBlogWiki/7.1做事专注的锻炼.md
@@ -64,6 +64,12 @@
 - 或者把令我们烦恼的事情写下来，用自己喜欢又能接受的方式，寄存在自己的秘密空间里，让它暂时不来困扰自己，等自己更有力量或更有闲情时，再进行处理。
 
 
+#### 4.4 避免多任务频繁切换
+- 每一次的任务切换都会有大量的注意力残留，这将会造成极大的注意力和时间损耗，唯一的破解之法就是尽量用一整段时间去专注于做好一件事情。
+- 唯有专注才能保持高效地学习，避免任务切换的隐形损耗。大部分时候，一段时间只专注于一件事，是最高效的学习方式。
+
+
+
 ### 05.提高专注力方式
 - 怎么做才能不仅保护专注力，还能更好地促进专注力的培养？第一，是“有准备的环境”，具体分为以下几方面。
 
@@ -83,7 +89,7 @@
 - 奖励自己一袋小零食等，自我肯定可以帮助培养我们的成就感和自信心。
 
 
-#### 5.4
+#### 5.4 bia
 
 
 ### 06.磨蹭对抗专注力
