--- a/Read/ReadLibary/01.LeakCanary内存收集.md
+++ b/Read/ReadLibary/01.LeakCanary内存收集.md
@@ -1,6 +1,6 @@
 #### 目录介绍
 - 01.整体概述介绍
-    - 1.1 项目背景
+    - 1.1 项目背景介绍
     - 1.2 遇到问题说明
     - 1.3 设计目标
     - 1.4 产生收益
@@ -36,17 +36,17 @@
     - 5.4 接口设计图
     - 5.5 模块间依赖关系
 - 06.其他设计说明
-    - 6.1 性能设计
+    - 6.1 性能设计优化
     - 6.2 稳定性设计
     - 6.3 灰度设计
     - 6.4 降级设计
-    - 6.5 异常设计
+    - 6.5 异常设计优化
 
 
 
 
 ### 01.整体概述介绍
-#### 1.1 项目背景
+#### 1.1 项目背景介绍
 
 
 
@@ -348,7 +348,7 @@
 
 
 
-#### 6.5 异常设计
+#### 6.5 异常设计优化
 
 
 
