--- a/Read/ReadOptimization/23.移动端防抓包实践.md
+++ b/Read/ReadOptimization/23.移动端防抓包实践.md
@@ -248,9 +248,11 @@
 #### 4.2 关闭代理
 - charles 和 fiddler 都使用代理来进行抓包，对网络客户端使用无代理模式即可防止抓包，如
     ``` java
-    OkHttpClient.Builder()
-        .proxy(Proxy.NO_PROXY)
-        .build()
+    public class Test {
+        OkHttpClient.Builder()
+            .proxy(Proxy.NO_PROXY)
+            .build();
+    }
     ```
 - no_proxy实际上就是type属性为direct的一个proxy对象，这个type有三种
     - direct，http，socks。这样因为是直连，所以不走代理。所以charles等工具就抓不到包了，这样一定程度上保证了数据的安全，这种方式只是通过代理抓不到包。
