--- a/Read/ReadProject/02.Apt实现组件通信.md
+++ b/Read/ReadProject/02.Apt实现组件通信.md
@@ -210,7 +210,8 @@
 - 编译生成代码发生在编译器
     - 编译期是在项目编译的时候，这个时候还没有开始打包，也就是没有生成apk呢！框架在这个时期根据注解去扫描所有文件，然后生成路由映射文件。这些文件都会统一打包到apk里！
 - 无需初始化操作
-    - 先看ARouter，会有初始化，主要是收集路由映射关系文件，在程序启动的时候扫描这些生成的类文件，然后获取到映射关系信息，保存起来。这个封装库不需要初始化，简化步骤，在获取的时候如果没有则在put操作map集合。具体看代码！
+    - 先看ARouter，会有初始化，主要是收集路由映射关系文件，在程序启动的时候扫描这些生成的类文件，然后获取到映射关系信息，保存起来。
+    - 这个封装库不需要初始化，简化步骤，在获取的时候如果没有则在put操作map集合。具体看代码！
 
 
 #### 4.2 总体设计思路
