--- a/Read/ReadProject/36.NDK开发设计实践.md
+++ b/Read/ReadProject/36.NDK开发设计实践.md
@@ -140,9 +140,13 @@
     - 注意：使用`as`编译后的`so`会自动打包到`apk`中，如果需要提供给第三方使用，可以到`build/intermediates/cmake/debug or release `目录中`copy`出来。
 - Java层如何调用so文件中的函数
     - 对于Android上层代码来说，在将包正确导入到项目中后，只需要一行代码就可以完成动态库的加载过程。有两种方式：
-    ```
-    System.load("/data/local/tmp/native_lib.so"); 
-    System.loadLibrary("native_lib");
+    ``` java
+    public class Test {
+        static {
+            System.load("/data/local/tmp/native_lib.so");
+            System.loadLibrary("native_lib");
+        }
+    }
     ```
     - 1.加载路径不同：`load`是加载`so`的完整路径，而`loadLibrary`是加载`so`的名称，然后加上前缀lib和后缀.so去默认目录下查找。
     - 2.自动加载库的依赖库的不同：load不会自动加载依赖库；而`loadLibrary`会自动加载依赖库。
@@ -310,7 +314,8 @@
     - JINEnv是当前Java线程的执行环境，一个JVM对应一个JavaVM结构体，一个JVM中可能创建多个Java线程，每个线程对应一个JNIEnv结构，它们保存在线程本地存储TLS中。
     - 因此不同的线程JNIEnv不同，而不能相互共享使用。 JavaEnv结构也是一个函数表，在本地代码通过JNIEnv函数表来操作Java数据或者调用Java方法。
 - JavaVM是什么？
-    - 待完善
+    - Java虚拟机（JavaVM）是一种运行在操作系统之上的抽象计算机，它是Java语言的运行环境，负责执行Java字节码。针对虚拟机，知道工作原理即可！
+
 
 
 
